# fivehundred

./: CMakeLists.txt  DESCRIPTION  Doxyfile.in  README  bid.cpp  bid.hpp  biddialog.cpp  biddialog.hpp  biddialog.ui  bidding.cpp  bidding.hpp  bidgrid.cpp  bidgrid.hpp  bubble.cpp  bubble.hpp  card.cpp  card.hpp  computer.cpp  computer.hpp  contract.cpp  contract.hpp  deck.cpp  deck.hpp  fivehundred.desktop.in  game.cpp  game.hpp  human.cpp  human.hpp  jokersuitdialog.cpp  jokersuitdialog.hpp  jokersuitdialog.ui  log.cpp  log.hpp  luabinding.hpp  luahelper.hpp  lupha.cpp  lupha.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  (+28 more)
gfx/: icon.icns
package/: copyright  debian.cmake  linux.cmake  osx.cmake  win32.cmake  win_icon.rc
scripts/: Ariadne.lua  Jed.lua  Patrick.lua
test/: CMakeLists.txt  dummy_player.hpp  test.lua  test_Ariadne.lua  test_bidding.cpp  test_bids.cpp  test_computer.cpp  test_lua.cpp  test_trick.cpp  test_trumps.cpp
